<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="address_textview">2465 Latham St Mountain View, CA 94043</string>
    <string name="phone_number">Phone Number</string>
    <string name="udacity_phone">(650) 555 5555</string>
    <string name="email_address">Email Address</string>
    <string name="udacity_email">info@udacity.com</string>
    <string name="website">Website</string>
    <string name="udacity_website">http:\\www.udacity.com</string>
    <string name="start_today">Learn More</string>
</resources>
