<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroid.MainActivity">


    <ImageView
        android:id="@+id/udacity_base_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/udacity_ver_1" />


    <LinearLayout
        android:id="@+id/address_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/udacity_base_image"
        android:layout_alignStart="@id/udacity_base_image"
        android:layout_below="@id/udacity_base_image"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/material_margin_1"
            android:layout_marginStart="@dimen/material_margin_1"
            android:src="@drawable/ic_place_white_56px" />

        <TextView
            android:id="@+id/address_textview_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="@dimen/material_padding_2"
            android:paddingTop="@dimen/material_padding_2"
            android:text="@string/address_textview"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_text_subhead" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/address_textview"
        android:layout_marginBottom="64dp"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/material_padding_2">

            <View
                android:id="@+id/view_phone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignLeft="@id/phone_number"
                android:layout_alignStart="@id/phone_number"
                android:layout_alignTop="@id/phone_number"
                android:layout_marginEnd="@dimen/material_margin_3"
                android:layout_marginRight="@dimen/material_margin_3" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:layout_marginTop="@dimen/material_margin_1"
                android:text="@string/phone_number"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/material_text_caption" />


            <TextView
                android:id="@+id/udacity_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:layout_marginTop="@dimen/material_margin_5"
                android:text="@string/udacity_phone"
                android:textColor="@android:color/black"
                android:textSize="@dimen/material_text_subhead" />

            <ImageView
                android:id="@+id/call_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/phone_number"
                android:layout_marginLeft="@dimen/material_margin_1"
                android:layout_marginStart="@dimen/material_margin_1"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_phone_black_24dp" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/udacity_phone"
                android:layout_marginBottom="@dimen/material_margin_1"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginRight="@dimen/material_margin_3"
                android:layout_marginTop="@dimen/material_margin_1"
                android:background="@android:color/darker_gray" />

            <View
                android:id="@+id/view_email"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignLeft="@id/email_address"
                android:layout_alignStart="@id/email_address"
                android:layout_alignTop="@id/email_address"
                android:layout_marginRight="@dimen/material_margin_3" />

            <TextView
                android:id="@+id/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_1"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:text="@string/email_address"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/material_text_caption" />

            <TextView
                android:id="@+id/udacity_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_address"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:layout_marginTop="@dimen/material_margin_5"
                android:text="@string/udacity_email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/material_text_subhead" />

            <ImageView
                android:id="@+id/email_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/email_address"
                android:layout_marginLeft="@dimen/material_margin_1"
                android:layout_marginStart="@dimen/material_margin_1"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_email_black_24dp" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/udacity_email"
                android:layout_marginBottom="@dimen/material_margin_1"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginRight="@dimen/material_margin_3"
                android:layout_marginTop="@dimen/material_margin_1"
                android:background="@android:color/darker_gray" />

            <View
                android:id="@+id/view_web"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignLeft="@id/website"
                android:layout_alignStart="@id/website"
                android:layout_alignTop="@id/website"
                android:layout_marginRight="@dimen/material_margin_3" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_2"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:text="@string/website"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/material_text_caption" />

            <TextView
                android:id="@+id/udacity_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/website"
                android:layout_marginLeft="@dimen/material_margin_2"
                android:layout_marginStart="@dimen/material_margin_2"
                android:layout_marginTop="@dimen/material_margin_5"
                android:text="@string/udacity_website"
                android:textColor="@android:color/black"
                android:textSize="@dimen/material_text_subhead" />


            <ImageView
                android:id="@+id/web_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/website"
                android:layout_marginLeft="@dimen/material_margin_1"
                android:layout_marginStart="@dimen/material_margin_1"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_public_black_24dp" />

        </RelativeLayout>

    </ScrollView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/button_1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/material_margin_4"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:paddingLeft="@dimen/material_padding_2"
        android:paddingRight="@dimen/material_padding_2"
        android:text="@string/start_today"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/material_text_subhead"
        android:textStyle="bold" />


</RelativeLayout>
